@@ -5,6 +5,8 @@ import org.mockito.Mockito;
 
 import java.util.List;
 
+// runs with jdk arg:
+// --add-opens=java.base/java.lang=ALL-UNNAMED
 @Ignore
 public class _00_simple_mock {
 
@@ -14,5 +16,7 @@ public class _00_simple_mock {
         System.out.println(list.get(-1));
         System.out.println(list.size());
         System.out.println(list.iterator());
+
+        System.out.println(list.getClass().getName());
     }
 }
